[package]
name = "threed-ice"
version = "0.7.0"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/3d-ice"
homepage = "https://github.com/markov-chain/3d-ice"
documentation = "https://markov-chain.github.io/3d-ice"
description = "The package provides an interface to 3D-ICE."

[dependencies]
matrix = "*"
threed-ice-sys = "*"

[dev-dependencies]
assert = "*"
fixture = "*"
temporary = "*"
