[package]
name = "threed-ice"
version = "0.11.1"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
license = "MIT"
repository = "https://github.com/markov-chain/3d-ice"
homepage = "https://github.com/markov-chain/3d-ice"
documentation = "https://markov-chain.github.io/3d-ice"
description = "The package provides an interface to 3D-ICE."

[dependencies]
matrix = { version = "0.21", default-features = false }
superlu = "0.2"
threed-ice-sys = "0.2"

[dev-dependencies]
assert = "0.6"
fixture = "0.2"
temporary = "0.5"
