[package]
name = "threed-ice"
version = "0.12.0"
license = "Apache-2.0/MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides an interface to 3D-ICE."
documentation = "https://markov-chain.github.io/3d-ice"
homepage = "https://github.com/markov-chain/3d-ice"
repository = "https://github.com/markov-chain/3d-ice"

[dependencies]
matrix = { version = "0.21", default-features = false }
superlu = "0.3"
threed-ice-sys = "0.3"

[dev-dependencies]
assert = "0.7"
fixture = "0.3"
temporary = "0.6"
